--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "author": "Vasylyna Kobetiak <vasylynavas@ukr.net>",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "config": "^3.3.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.4.0",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.14",
     "pg": "^8.0.2"
   },
