--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-openid-connect": "^1.0.1",
     "express-validator": "^6.4.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.14",
